--- a/src/main/resources/Config.Properties
+++ b/src/main/resources/Config.Properties
@@ -1,8 +1,8 @@
 url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-username=Admin
-password=admin123
+username=-------
+password=-------
 browser=Chrome
 explicitWait=10
-sauceUsername=oauth-georgegurdjieff7-77386
-sauceAccessKey=08893bc4-2f4e-43a4-954f-56a720377f3b
+sauceUsername=-------
+sauceAccessKey=-------
 runMode=local
