--- a/src/main/resources/Config.Properties
+++ b/src/main/resources/Config.Properties
@@ -1,6 +1,6 @@
 url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
-username=-------
-password=-------
+username=Admin  
+password=admin123
 browser=Chrome
 explicitWait=10
 sauceUsername=-------
